<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_browse"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_browse"
        android:title="@string/bottomNav1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_search"
        android:title="@string/bottomNav2"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_favorite"
        android:title="@string/bottomNav3"
        app:showAsAction="ifRoom"
        />

</menu>